Enable contact selection

--- a/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -7,12 +7,11 @@
   </div>
   <div class="panel-body">
     <div class="list-group">
-      <a href="#" class="list-group-item clearfix" style="margin: 0;" *ngFor="let contact of contacts">
-        <h4 class="list-group-item-heading pull-left" style="margin: 0;">{{ contact.name }}</h4>
-        <span class="pull-right">
-          <img [src]="contact.imageUrl" alt="{{ contact.name }}" class="img-responsive" style="max-height: 50px">
-        </span>
-      </a>
+      <cms-contact-item
+        *ngFor="let contactEl of contacts"
+        [contact]="contactEl"
+        (click)="onSelected(contactEl)"
+        ></cms-contact-item>
     </div>
   </div>
 </div>
