--- a/cms/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/cms/src/app/contacts/contact-detail/contact-detail.component.html
@@ -1,13 +1,19 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h4 class="panel-title">{{ contact.name }}</h4>
-    <img
-    [src]="contact.imageUrl"
-    alt="{{ contact.name}}"
-    class="img-responsive"
-    style="max-height: 75px;">
-    <a class="btn btn-primary" href="#">Edit</a>
-    <a class="btn btn-danger" href="#">Delete</a>
+    <div class="row">
+      <div class="col-xs-12">
+        <h3>{{ contact.name }}</h3>
+      </div>
+    </div>
+    <div class="row" style="display: flex; align-items: center;">
+      <div class="col-xs-8">
+        <img [src]="contact.imageUrl" alt="{{ contact.name}}" class="img-responsive" style="max-height: 100px;">
+      </div>
+      <div class="col-xs-4 text-right">
+        <a class="btn btn-primary" href="#">Edit</a>
+        <a class="btn btn-danger" href="#">Delete</a>
+      </div>
+    </div>
   </div>
   <div class="panel-body">
     <p><strong>Email:</strong> {{ contact.email }}</p>
