--- a/cms/src/app/message/message-item/message-item.component.html
+++ b/cms/src/app/message/message-item/message-item.component.html
@@ -1,6 +1,6 @@
 <a href="#" class="list-group-item clearfix">
   <div class="">
-    <span class="messageHeader">SendersName</span>
-    <div class="messageText">MessageText</div>
+    <span class="messageHeader">{{ message.sender }}</span>
+    <div class="messageText">{{ message.msgText }}</div>
   </div>
 </a>
