--- a/cms/src/app/app.component.html
+++ b/cms/src/app/app.component.html
@@ -1,4 +1,8 @@
-<cms-header></cms-header>
-<div class="container">
-  <cms-contacts></cms-contacts>
+<cms-header
+    (selectedFeatureEvent)="switchView($event)">
+</cms-header>
+<div class="container pull-left">
+  <cms-documents *ngIf="selectedFeature === 'documents'"></cms-documents>
+  <cms-message-list *ngIf="selectedFeature === 'messages'"></cms-message-list>
+  <cms-contacts *ngIf="selectedFeature === 'contacts'"></cms-contacts>
 </div>
