--- a/cms/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/cms/src/app/contacts/contact-detail/contact-detail.component.html
@@ -9,7 +9,7 @@
       <div class="col-xs-8">
         <img [src]="contact.imageUrl" alt="{{ contact.name}}" class="img-responsive" style="max-height: 100px;">
       </div>
-      <div class="col-xs-4 text-right">
+      <div class="col-xs-4 text-right" style="display: flex; justify-content: flex-end; gap: 6px;">
         <a class="btn btn-primary" href="#">Edit</a>
         <a class="btn btn-danger" href="#">Delete</a>
       </div>
