--- a/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-heading clearfix">
-    <h2 class="pull-left" style="margin: 0; line-height: 34px;">Contacts</h2>
+    <h2 class="pull-left" style="margin: 0;">Contacts</h2>
     <a class="btn btn-sm btn-success pull-right" href="#">
       New Contact
     </a>
