--- a/cms/src/app/header.component.html
+++ b/cms/src/app/header.component.html
@@ -6,13 +6,13 @@
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="#">Documents</a></li>
-        <li><a href="#">Messages</a></li>
-        <li><a href="#">Contacts</a></li>
+        <li><a (click)="onSelected('documents')">Documents</a></li>
+        <li><a (click)="onSelected('messages')">Messages</a></li>
+        <li><a (click)="onSelected('contacts')">Contacts</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" role="button">User<span class="caret"></span></a>
+          <a class="dropdown-toggle" role="button">User<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Option 1</a></li>
             <li><a href="#">Option 2</a></li>
